--- a/src/app/components/auditoria-login/auditoria-login.component.html
+++ b/src/app/components/auditoria-login/auditoria-login.component.html
@@ -2,9 +2,9 @@
   <div style="padding-top: 30px">
     <mat-form-field appearance="outline" style="width: 100%">
       <mat-label>Período da pesquisa</mat-label>
-      <mat-date-range-input [rangePicker]="picker">
-        <input matStartDate placeholder="Data início">
-        <input matEndDate placeholder="Data fim">
+      <mat-date-range-input [rangePicker]="picker" [formGroup]="datasSelecionadas" required>
+        <input matStartDate formControlName="dataInicio" placeholder="Data início" required>
+        <input matEndDate (dateChange)="carregaLogins()" formControlName="dataFim" placeholder="Data fim" required>
       </mat-date-range-input>
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-date-range-picker #picker></mat-date-range-picker>
@@ -47,7 +47,7 @@
       </ng-container>
       <ng-container matColumnDef="dataHora">
         <mat-header-cell *matHeaderCellDef mat-sort-header> Data </mat-header-cell>
-        <mat-cell *matCellDef="let login" class="mouse-pointer"> {{ utilService.getDate(login.dataHora) | date: 'medium' }} </mat-cell>
+        <mat-cell *matCellDef="let login" class="mouse-pointer"> {{ getDate(login.dataHora) | date: 'medium' }} </mat-cell>
       </ng-container>
 
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
