--- a/src/app/components/auditoria-alteracoes/auditoria-alteracoes.component.html
+++ b/src/app/components/auditoria-alteracoes/auditoria-alteracoes.component.html
@@ -14,7 +14,7 @@
   <div>
     <br/>
 
-    <mat-table [dataSource]="dataSourceAlteracao" matSort class="mat-elevation-z8">
+    <mat-table [dataSource]="dataSourceAlteracao" matSortActive="dataHora" matSortDirection="desc" matSort class="mat-elevation-z8">
       <ng-container matColumnDef="id">
         <mat-header-cell *matHeaderCellDef mat-sort-header> Id </mat-header-cell>
         <mat-cell *matCellDef="let alteracao" class="mouse-pointer"> {{alteracao.id}} </mat-cell>
