--- a/src/app/components/auditoria-login/auditoria-login.component.html
+++ b/src/app/components/auditoria-login/auditoria-login.component.html
@@ -47,7 +47,7 @@
       </ng-container>
       <ng-container matColumnDef="dataHora">
         <mat-header-cell *matHeaderCellDef mat-sort-header> Data </mat-header-cell>
-        <mat-cell *matCellDef="let login" class="mouse-pointer"> {{ getDate(login.dataHora) | date: 'medium' }} </mat-cell>
+        <mat-cell *matCellDef="let login" class="mouse-pointer"> {{ login.dataHora | date: 'medium' }} </mat-cell>
       </ng-container>
 
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
