--- a/src/app/components/auditoria/auditoria.component.html
+++ b/src/app/components/auditoria/auditoria.component.html
@@ -16,12 +16,12 @@
               <app-auditoria-login></app-auditoria-login>
             </ng-template>
           </mat-tab>
-          <mat-tab label="Cotaçoes">
+          <mat-tab label="Cotações">
             <ng-template matTabContent>
               <app-auditoria-cotacao></app-auditoria-cotacao>
             </ng-template>
           </mat-tab>
-          <mat-tab label="Alteraçoes">
+          <mat-tab label="Alterações">
             <ng-template matTabContent>
               <app-auditoria-alteracoes></app-auditoria-alteracoes>
             </ng-template>
