--- a/src/app/components/auditoria-alteracoes/auditoria-alteracoes.component.html
+++ b/src/app/components/auditoria-alteracoes/auditoria-alteracoes.component.html
@@ -15,6 +15,12 @@
       </a>
     </span>
   </div>
+  <div>
+    <mat-form-field style="width: 100%">
+      <mat-label>Filtro</mat-label>
+      <input matInput (keyup)="applyFilterAlteracoes($event)" placeholder="Filtro" #inputFiltroEntidade>
+    </mat-form-field>
+  </div>
 
   <div>
     <br/>
